--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1865,8 +1865,7 @@ input, select, textarea {
 			}
 
 			.icon.style2:hover {
-				color: #f2849e;
-				border-color: #f2849e;
+				color: #16375e;
 			}
 
 			.icon.style2:active {
